src/test/deca/syntax/valid/homemade/variable_affectation.deca
// Description :
//      Test of variable affectation
//
// Results :
//      69420true
//
// History :
//      created on 9/01/2020

{
    int x = 69420;
    boolean y = 5 < 6;
    float z;
}