src/test/deca/syntax/invalid/homemade/declaration_after_inst.deca
// Description :
//      main block declaring a variable AFTER an instruction is done.
//
// Results :
//      parser error
//
// History :
//      created on 11/01/2020

{
    int y = 5;
    print("weeeeeeeeeeeeeeee", y);

    int x = 3;

}

